<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItemsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="56dp"
            android:clickable="true"
            android:contentDescription="@string/confirm"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_done"
            app:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="40dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/take_a_picture"
            android:focusable="true"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/ic_camera"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="40dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_delete"
            app:backgroundTint="@color/red"
            app:layout_constraintBottom_toTopOf="@+id/buttonConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="40dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/buttonPickPreviewImage"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/grey"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/preview_of_img"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/itemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/write_a_name"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/buttonPickPreviewImage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pick_a_file"
        app:layout_constraintBottom_toTopOf="@+id/buttonPickPreviewImage"
        app:layout_constraintEnd_toEndOf="@+id/buttonPickPreviewImage"
        app:layout_constraintStart_toStartOf="@+id/buttonPickPreviewImage" />

    <RadioGroup
        android:id="@+id/radioGroupColorCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPickPreviewImage"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:buttonTint="@color/red"
            android:contentDescription="@string/button_red"
            android:textColor="@color/red"
            android:textColorHighlight="@color/red"
            android:textColorHint="@color/red"
            android:textColorLink="@color/red" />

        <RadioButton
            android:id="@+id/radioButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue" />

        <RadioButton
            android:id="@+id/radioButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/green" />

        <RadioButton
            android:id="@+id/radioButtonYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yellow" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_color_code"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupColorCode"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupColorCode"
        app:layout_constraintStart_toStartOf="@+id/radioGroupColorCode" />
</androidx.constraintlayout.widget.ConstraintLayout>